# alan_cxx_project

./: CMakeLists.txt  README.md  config.json  main.cc
include/: process.h
proto/: config.proto
scripts/: build.sh
src/: process.cc
test/: unit_test.cc
utils/: utils.h
